# document_splitting_metadata_generation

./: .gitignore  README.md  config.ini  pyproject.toml  split_documents.py
assignment_test/: output_test.xlsx
pipeline/: config_loader.py  excel_handler.py  models.py  output_writer.py  pdf_handler.py  segmentation.py
tests/: conftest.py  test_config_loader.py  test_excel_handler.py  test_segmentation.py
