[project]
name = "doc-extractor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pikepdf>=8.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
